- Added font family import, set font family and updated all headings and paragraph styling

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,12 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800');
-
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
 html,
 body {
     width: 100%;
     height: auto;
     background-color: white;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Outfit', sans-serif;
     min-height: 100%;
+    /*This defines what 1rem is*/
+    font-size: 62.5%;
+    color: #000;
 }
 
 html {
@@ -25,82 +27,49 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Poppins', sans-serif;
-    font-style: normal;
+    font-family: 'Outfit', sans-serif;
     font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
 }
 
 h1 {
-    font-weight: 700;
-    font-size: 30px;
-    line-height: 38px;
-    letter-spacing: 0.09px;
-    color: #141414;
+    font-size: 3.4rem;
+    font-weight: 500;
 }
 
 h2 {
-    font-weight: 600;
-    font-size: 26px;
-    line-height: 34px;
-    letter-spacing: 0.09px;
-    color: #141414;
+    font-size: 2.8rem;
+    font-weight: 500;
 }
 
 h3 {
+    font-size: 2.2rem;
     font-weight: 500;
-    font-size: 22px;
-    line-height: 30px;
-    letter-spacing: 0.07px;
-    color: #141414;
 }
 
 h4 {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 28px;
-    letter-spacing: 0.07px;
-    color: #141414;
+    font-size: 2rem;
+    font-weight: 500;
 }
 
 h5 {
+    font-size: 1.6rem;
     font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.07px;
-    color: #141414;
-}
-
-h6 {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 22px;
-    letter-spacing: 0.05px;
-    color: rgba(20, 20, 20, 0.5);
 }
 
 p {
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 24px;
-    letter-spacing: 0.07px;
-    color: rgba(20, 20, 20, 0.7);
+    font-size: 1.6rem;
+    font-weight: normal;
 }
 
 .sub-label {
     font-weight: 500;
     font-size: 13px;
-    line-height: 21px;
-    letter-spacing: 0.07px;
-    color: rgba(20, 20, 20, 0.5);
 }
 
 .figcaption {
     font-weight: 500;
     font-size: 13px;
-    line-height: 21px;
-    letter-spacing: 0.07px;
-    color: rgba(20, 20, 20, 0.5);
 }
-
-
-
