- Created preset styling

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -76,6 +76,15 @@ p {
 
 
 /*========================
+Preset Styling
+========================*/
+
+.border-radius-25 {
+    border-radius: 25px;
+}
+
+
+/*========================
 Buttons
 ========================*/
 
