- Updated navbar padding

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -115,6 +115,7 @@ Main Navigation
     position: relative;
     border-radius: 27px;
     background-color: #000;
+    padding: 1.9rem;
     padding-left: 22rem;
 }
 
