--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -235,3 +235,7 @@ Home Page
 .products-accordion .accordion .accordion-item .accordion-collapse {
     background-color: #f2f2f2;
 }
+
+.products-accordion .accordion .accordion-item .accordion-collapse .accordion-body {
+    padding: 1rem 0;
+}
