--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -37,12 +37,14 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
     font-family: 'Outfit', sans-serif;
     font-stretch: normal;
     font-style: normal;
     line-height: normal;
     letter-spacing: normal;
+    margin-bottom: 0;
 }
 
 h1 {
