--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -94,8 +94,30 @@ p {
 Preset Styling
 ========================*/
 
+.border-radius-20 {
+    border-radius: 20px;
+}
+
 .border-radius-25 {
     border-radius: 25px;
+}
+
+.thumb-grow {
+    transition: all .2s ease-in-out;
+}
+
+.thumb-grow:hover {
+    transform: scale(1.07);
+    text-decoration: none;
+}
+
+.thumb-grow-small {
+    transition: all .2s ease-in-out;
+}
+
+.thumb-grow-small:hover {
+    transform: scale(1.02);
+    text-decoration: none;
 }
 
 
