--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -340,6 +340,39 @@ Product Styling
 
 
 /*========================
+View Cart
+========================*/
+
+
+/* View Cart Hero Banner */
+
+.viewCart {
+    margin-top: 16.5rem;
+}
+
+.viewCart h1 {
+    display: inline-block;
+}
+
+.viewCart .result-pill {
+    display: inline-block;
+    width: fit-content;
+    font-size: 1.6rem;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.13;
+    letter-spacing: normal;
+    color: #fff;
+    padding: 11px 14px;
+    border-radius: 21px;
+    background-color: #e61c24;
+    margin-left: 18px;
+    text-transform: uppercase;
+}
+
+
+/*========================
 Footer
 ========================*/
 
