--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -371,6 +371,64 @@ View Cart
     text-transform: uppercase;
 }
 
+.cart-items {
+    margin-top: 25px;
+    padding: 3.2rem 0 4.7rem;
+    background-color: #f2f2f2;
+}
+
+.cart-items .row:not(:last-child) {
+    margin-bottom: 35px;
+}
+
+.cart-items h5 {
+    margin: 10px 0;
+}
+
+.cart-items label {
+    font-size: 1.6rem;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #989898;
+}
+
+.cart-items select,
+.cart-items input,
+.cart-items select:focus,
+.cart-items input:focus {
+    font-size: 2.2rem;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    color: #000;
+    border-radius: 10px;
+    border: solid 1px #dfdfdf;
+    background-color: #fff;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+}
+
+.cart-items select {
+    padding: 15px 20px;
+}
+
+.cart-items input {
+    padding: 15px 22px;
+    text-align: center;
+}
+
+.cart-items button {
+    border: none;
+}
+
+.cart-items .btn.btn-primary {
+    padding: 17px 90px 17px 20px;
+}
+
 
 /*========================
 Footer
