- Added preset text color styling

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -91,6 +91,15 @@ p {
 
 
 /*========================
+Text Colors
+========================*/
+
+.text-vivid-red {
+    color: #f92323;
+}
+
+
+/*========================
 Preset Styling
 ========================*/
 
