--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -277,7 +277,7 @@ Home Page
     top: 50%;
     right: 0;
     transform: translate(0, -50%);
-    background-image: url('../images/arrow.svg');
+    background-image: url('../images/icons/ico-arrow.svg');
     background-size: cover;
     width: 30px;
     height: 30px;
@@ -287,7 +287,7 @@ Home Page
     top: 50%;
     right: 0;
     transform: translate(0, -50%) rotate(-180deg);
-    background-image: url('../images/arrow.svg');
+    background-image: url('../images/icons/ico-arrow.svg');
     background-size: cover;
     width: 30px;
     height: 30px;
