--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -153,7 +153,7 @@ Buttons
 .btn-primary:focus,
 .btn-primary:active {
     box-shadow: 4px 3px 16px 0 rgba(0, 0, 0, 0.06);
-    color: #e61c24;
+    color: #e61c24 !important;
     background-color: #fff;
     border-color: #e61c24;
     text-transform: uppercase;
