- Styled all alerts

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -164,19 +164,37 @@ Buttons
 Alerts
 ========================*/
 
-.alert-danger {
-    border-radius: 8px;
+.alert {
+    margin-bottom: 0;
     font-size: 1.6rem;
     font-weight: normal;
     font-stretch: normal;
     font-style: normal;
     line-height: normal;
     letter-spacing: normal;
+    margin-bottom: 0;
+    border-radius: 8px;
+}
+
+.alert-danger {
     padding: 23px 25px;
     color: #842029;
     border: solid 1px #f5c2c7;
     background-color: #f8d7da;
-    margin-bottom: 0;
+}
+
+.alert-success {
+    color: #0e5d16;
+    border: solid 1px rgba(28, 167, 42, 0.36);
+    background-color: rgba(28, 167, 42, 0.22);
+}
+
+.alert-dark {
+    font-size: 2rem;
+    font-weight: 500;
+    color: #5a5a5a;
+    border: solid 1px rgba(0, 0, 0, 0.27);
+    background-color: rgba(0, 0, 0, 0.09);
 }
 
 
