--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -234,7 +234,6 @@ Pills
     letter-spacing: normal;
     padding: 11px 14px;
     border-radius: 21px;
-    margin-left: 18px;
     text-transform: uppercase;
     color: #fff;
 }
@@ -501,6 +500,18 @@ View Cart
     display: inline-block;
 }
 
+@media only screen and (max-width: 991px) {
+    .viewCart {
+        margin-top: 8.5rem;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .viewCart {
+        margin-top: 6.5rem;
+    }
+}
+
 
 /*========================
 Order Success
@@ -523,6 +534,18 @@ Order Success
     margin-bottom: 15px;
 }
 
+@media only screen and (max-width: 991px) {
+    .orderSuccess {
+        margin-top: 8.5rem;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .orderSuccess {
+        margin-top: 6.5rem;
+    }
+}
+
 
 /*========================
 Order History
@@ -543,6 +566,18 @@ Order History
 
 .orderHistory .bg-light-gray .row:nth-child(1) {
     margin-bottom: 7rem;
+}
+
+@media only screen and (max-width: 991px) {
+    .orderHistory.cart-items {
+        margin-top: 8.5rem;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .orderHistory.cart-items {
+        margin-top: 6.5rem;
+    }
 }
 
 
@@ -572,6 +607,18 @@ Order Charters
     background-color: #d1d1d1;
 }
 
+@media only screen and (max-width: 991px) {
+    .orderCharters.cart-items {
+        margin-top: 8.5rem;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .orderCharters.cart-items {
+        margin-top: 6.5rem;
+    }
+}
+
 
 /*========================
 Order Admin
@@ -586,11 +633,11 @@ Order Admin
     border-bottom: none;
 }
 
-.orderAdmin .nav-tabs li {
+.orderAdmin .nav-tabs li a {
     opacity: 0.2;
 }
 
-.orderAdmin .nav-tabs li.active {
+.orderAdmin .nav-tabs li a.active {
     opacity: 1;
 }
 
@@ -625,6 +672,18 @@ Order Admin
 .orderAdmin .bg-light-gray hr:not([size]) {
     height: 3px;
     background-color: #d1d1d1;
+}
+
+@media only screen and (max-width: 991px) {
+    .orderAdmin.cart-items {
+        margin-top: 8.5rem;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+    .orderAdmin.cart-items {
+        margin-top: 6.5rem;
+    }
 }
 
 
